--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,6 @@
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body {
+  padding-top: 56px;
+  background-color: #f8f9fa;
+  font-family: Arial, sans-serif;
+}
